# patch-hub

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  RELEASES.md  foo.patch  format_and_lint.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  code-quality-improvement.md  feature-request.md
.github/workflows/: build_and_unit_test.yml  format_and_lint.yml  install.yml  release.yml  test_coverage.yml
.idx/: dev.nix
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
proc_macros/tests/: serde_individual_default.rs
res/: amd-gfx_24-06-25_07-57-35.xml  git_24-06-27_00-09-52.xml
src/: app.rs  cli.rs  config.rs  env.rs  handler.rs  lib.rs  logger.rs  lore.rs  lore_api_client.rs  lore_response.rs  lore_session.rs  macros.rs  mailing_list.rs  main.rs  monitoring.rs  patch.rs  ui.rs  utils.rs
src/app/: config.rs  cover_renderer.rs  edit_config.rs  loggc.rs  logging.rs  mod.rs  patch_renderer.rs  screens.rs
src/app/config/: tests.rs
src/app/logging/: garbage_collector.rs  log_on_error.rs  logger.rs  mod.rs
src/app/screens/: bookmarked.rs  details.rs  details_actions.rs  edit_config.rs  latest.rs  mail_list.rs
src/config/: tests.rs
src/handler/: bookmarked.rs  details.rs  details_actions.rs  edit_config.rs  latest.rs  mail_list.rs  mod.rs
src/infrastructure/: errors.rs  mod.rs  terminal.rs
src/infrastructure/logging/: garbage_collector.rs  mod.rs
src/lore/: lore_api_client.rs  lore_session.rs  mailing_list.rs  patch.rs
src/lore/lore_api_client/: tests.rs
src/lore/lore_session/: tests.rs
src/lore/patch/: tests.rs
src/lore_api_client/: tests.rs
src/lore_session/: patch_feed_sample_2.xml  tests.rs
src/lore_session/res_generate_patch_reply_template/: patch_sample.mbx
src/lore_session/res_prepare_reply_w_reviewed_by/: cover_letter.cover  expected_patch_2-reply.mbx  patch_3.mbx
src/lore_session/res_process_available_lists/: available_lists_response-1.html  available_lists_response-3.html
src/lore_session/res_split_patchset/: expected_patch_1.mbx  patchset_sample_complete.cover  patchset_sample_complete.mbx
src/mailing_list/: tests.rs
src/monitoring/: logging.rs
src/monitoring/logging/: log_on_error.rs  multi_log_file_writer.rs
src/patch/: tests.rs
src/test_samples/app/config/: config.json
src/test_samples/lore_session/extract_git_reply_command/: patch_lore_sample.html
src/test_samples/lore_session/generate_patch_reply_template/: expected_reply_template.mbx
src/test_samples/lore_session/process_representative_patch/: patch_feed_sample_1.xml
src/test_samples/ui/render_patchset/: expected_diff-so-fancy.diff
src/ui/: bookmarked.rs  details_actions.rs  edit_config.rs  latest.rs  loading_screen.rs  mail_list.rs  mod.rs  navigation.rs  navigation_bar.rs  patchset_details.rs  popup.rs  render_edit_config.rs  render_patchset.rs
src/ui/popup/: help.rs  info_popup.rs  review_trailers.rs
test_samples/app/config/: config.json
test_samples/lore_session/prepare_reply_w_reviewed_by/: expected_patch_0-reply.mbx  expected_patch_1-reply.mbx  expected_patch_3-reply.mbx  patch_2.mbx
test_samples/lore_session/process_available_lists/: available_lists_response-2.html
test_samples/ui/render_patchset/: expected_bat.diff  expected_delta.diff
