[package]
name = "patch-hub"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/kworkflow/patch-hub"
description = "patch-hub is a TUI that streamlines the interaction of Linux developers with patches archived on lore.kernel.org"

[dependencies]
color-eyre = "0.6.3"
ratatui = "0.27.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.120"
clap = { version = "4.5.13", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[lints.rust]
warnings = "deny"
unconditional_recursion = "deny"

[lints.clippy]
too-many-arguments = "allow"
map_unwrap_or = "deny"