[package]
name = "patch-hub"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/kworkflow/patch-hub"
description = "patch-hub is a TUI that streamlines the interaction of Linux developers with patches archived on lore.kernel.org"

[dependencies]
color-eyre = "0.6.3"
mockall = "0.13.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
lazy_static = "1.5.0"
ratatui = "0.28.1"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.120"
thiserror = "1.0.37"
clap = { version = "4.5.13", features = ["derive"] }
chrono = "0.4.38"
ansi-to-tui = "6.0.0"
which = "6.0.3"
ureq = { version = "=3.0.0-rc2", features = ["rustls"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Linter configurations
[lints.rust]
warnings = "deny"
unconditional_recursion = "deny"

[lints.clippy]
too-many-arguments = "allow"
map_unwrap_or = "deny"
