[package]
name = "proc_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
syn = { version = "2.0.100", features = ["full"] }
quote = "1.0.4"
proc-macro2 = "1.0.94"

[lib]
proc-macro = true
doctest = false # otherwise tests will fail
